@@ -1154,6 +1154,27 @@ div.message-partheaders .headers-table td.header {
 	bottom: 0;
 }
 
+#composequicksearch {
+	position: relative;
+	padding: 4px;
+	background: #c7e3ef;
+}
+
+#composequicksearch .searchbox {
+	height: 26px;
+}
+
+#composequicksearch .searchbox input {
+	width: auto;
+	position: absolute;
+	left: 0px;
+	right: 0px;
+}
+
+#composequicksearch #searchmenulink {
+	width: 15px;
+}
+
 #compose-contacts #directorylist {
 	border-bottom: 4px solid #c7e3ef;
 }
